--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@
     color: #f4f4f4;
 }
 .main{
-    margin-top: 8.5%;
+    margin-top: 10.5%;
     height: 50vh;
     padding: 20px;
     width: 100vw;
@@ -96,7 +96,7 @@
 .carousel{
     padding: 30px;
     max-width: 100%;
-    overflow: hidden;
+    overflow: scroll;
     position: relative;
     height: 80vh;
     box-sizing: border-box;
